--- a/How to Make a Video Game/How to Make a Video Game.csproj
+++ b/How to Make a Video Game/How to Make a Video Game.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Assets\Scripts\FlySpawner.cs" />
     <Compile Include="Assets\Scripts\FollowCamera.cs" />
     <Compile Include="Assets\Scripts\GameQuality.cs" />
+    <Compile Include="Assets\Scripts\GameState.cs" />
     <Compile Include="Assets\Scripts\PickupParticlesDestruction.cs" />
     <Compile Include="Assets\Scripts\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
